tests/fixtures/invalid/pointer_out_of_scope.c
int main() {
    int *p = 0;
    {
        int x = 7;
        p = &x;
    }
    return *p;
}
